# lightspeed-mcps

./: .dockerignore  .gitignore  Containerfile  OWNERS  README.md  config.yaml.sample  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-and-push-mcps.yaml  pre-commit.yaml
scripts/: allow-deny-list.py  allow-deny-list.yaml  get-crc-creds.sh
src/rhos_ls_mcps/: main.py  oc.py  osc.py  settings.py
